force-app/main/default/objects/MUSW__Bluebeam_Relationship_Setting__mdt/MUSW__Bluebeam_Relationship_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Bluebeam Relationship Setting</label>
    <pluralLabel>Bluebeam Relationship Settings</pluralLabel>
</CustomObject>