force-app/main/default/objects/MUSW__Bluebeam_Relationship_Setting__mdt/fields/MUSW__Parent_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Parent_Object_API_Name__c</fullName>
    <label>Parent Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>