force-app/main/default/objects/MUSW__Bluebeam_Relationship_Setting__mdt/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Session</fullName>
                <default>true</default>
                <label>Session</label>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>Comment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>